@@ -1,7 +1,8 @@
 0.2.3
 --------------------------------------------------------
 - bug修正
-  * IE9下placeholder异常
+  * 修正IE9下placeholder异常
+  * 修正IE6下弹层无法盖住select问题
   * 修正日历在跨年选择时年份错误问题
 - 功能支持
   * webform支持多选select
